data/collection/fixes/descriptions/scala/scala-8869
```scala
class TC[T[_]] {
  def identity[A](a: T[A]): T[A] = a
}
def value: TC[({type l[x] = Option})#l] = new TC[({type l[x] = Option})#l]
```

TC is * -> * but what I'm supplying is * -> * which should not be possible (the right hand side should only accept *)

Playing around with it some more:

```
scala> :t value.identity[Int] _
Option[A] => Option[A]
```

Where did that A come from?

```
scala> value.identity[Int](Some(1))
<console>:10: error: type mismatch;
 found   : Int(1)
 required: A
              value.identity[Int](Some(1))
                                       ^
```